tests and endpoints
