# pkg/handlers/api/v1/test.go
@@ -3,9 +3,8 @@ package handlers
 import (
 	"github.com/gofiber/fiber/v2"
 
-	"yuka-case/pkg/cache"
-	payloadScheme "yuka-case/pkg/schema/payload/v1/test"
-	responseScheme "yuka-case/pkg/schema/response/v1/test"
+	payloadSchema "yuka-case/pkg/schema/payload/v1"
+	responseSchema "yuka-case/pkg/schema/response/v1"
 	"yuka-case/pkg/utils/validate"
 )
 
@@ -17,26 +16,18 @@ type Test struct{}
 // @Tags Test
 // @Accept json
 // @Produce json
-// @Param payload body payloadScheme.Test true "Test Payload"
-// @Response 200 {object} responseScheme.Test
+// @Param payload body payloadSchema.Test true "Test Payload"
+// @Response 200 {object} responseSchema.Test
 // @Router /v1/test [post]
 func (t *Test) Test(c *fiber.Ctx) error {
-	testValid := new(payloadScheme.Test)
+	testValid := new(payloadSchema.Test)
 	c.BodyParser(testValid)
 	if err := validate.ValidateStruct(testValid); err != nil {
 		return c.Status(fiber.StatusNotAcceptable).JSON(err)
 	}
 
-	cache.Cache().Set("test", testValid.Message)
-	cacheValue, cacheErr := cache.Cache().Get("test")
-
-	if cacheErr != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(cacheErr)
-	}
-
-	testResponse := responseScheme.Test{
+	testResponse := responseSchema.Test{
 		Message: testValid.Message,
-		Cache:   cacheValue,
 	}
 
 	return c.JSON(testResponse)
